Added images and index.html page
index.html and images were not present and all pages were not linked to the index.html

--- a/recipes/banana_pudding.html
+++ b/recipes/banana_pudding.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/banana_pudding.jpg" alt="lasagna" height="250" width="500">
+    <h3><a href="../index.html">Home</a></h3>
+    <img src="../images/banana-pudding.jpg" alt="lasagna" height="250" width="500">
     <h3>Description</h3>
     <p>There are so many versions of banana pudding—or puddin', as we call it. This one allows you to make it from scratch like we do and always have, just like our mama and our grandmas and our aunts used to do. Just be sure to make enough! After putting in the effort, you don't want to be the one to go, "Where's the banana pudding? I missed it!"</p>
         <h3>Ingredients</h3>
