--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <h3><a href="../index.html">Home</a></h3>
     <img src="../images/lasagna.jpg" alt="lasagna" height="250" width="500">
     <h3>Description</h3>
     <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. 
